--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       height: 100%;
       width: 100%;
       background-color: black;
+      cursor: url('https://firebasestorage.googleapis.com/v0/b/cosmox-87a63.appspot.com/o/Default%2Fimages%2Fcursor.gif?alt=media&token=a2322c56-e4c6-45f9-b133-b45f1690c807'), default;
     }
   </style>
 </head>
