--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <title>cosmox</title>
   <style>
     body{
@@ -16,7 +17,7 @@
       height: 100%;
       width: 100%;
       background-color: black;
-      cursor: url('https://firebasestorage.googleapis.com/v0/b/cosmox-87a63.appspot.com/o/Default%2Fimages%2Fcursor.gif?alt=media&token=a2322c56-e4c6-45f9-b133-b45f1690c807'), default;
+      cursor: url('https://firebasestorage.googleapis.com/v0/b/cosmox-87a63.appspot.com/o/Default%2Fimages%2Fcursor.gif?alt=media&token=7440320d-85e8-40e6-985e-7d6cdc205691'), default;
     }
   </style>
 </head>
