creation du component login

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <title>cosmox</title>
   <style>
     body{
@@ -18,6 +21,8 @@
       width: 100%;
       background-color: black;
       cursor: url('https://firebasestorage.googleapis.com/v0/b/cosmox-87a63.appspot.com/o/Default%2Fimages%2Fcursor.gif?alt=media&token=7440320d-85e8-40e6-985e-7d6cdc205691'), default;
+     
+    
     }
   </style>
 </head>
